Visualizing fulfilling a set of path using bfs

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -863,6 +863,42 @@
     "for l in chk:\n",
     "    print(l)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "dy = (0, 1, 0, -1)\n",
+    "dx = (1, 0, -1, 0)\n",
+    "adj = [[0] * 20 for _ in range(20)]\n",
+    "chk = [[False] * 20 for _ in range(20)]\n",
+    "\n",
+    "upper, lower, left, right = map(int, input().split())\n",
+    "\n",
+    "def is_coord_valid(y, x):\n",
+    "    return lower <= y < upper and left <= x < right\n",
+    "\n",
+    "def bfs(start_y, start_x):\n",
+    "    q = deque()\n",
+    "    q.append((start_y, start_x))\n",
+    "    \n",
+    "    while len(q) > 0:\n",
+    "        y, x = q.popleft()\n",
+    "        adj[y][x] = 1\n",
+    "        chk[y][x] = True       \n",
+    "        \n",
+    "        for k in range(4):\n",
+    "            ny = y + dy[k]\n",
+    "            nx = x + dx[k]\n",
+    "            if is_coord_valid(ny, nx) and not chk[ny][nx]:\n",
+    "                q.append((ny, nx))\n",
+    "                if k % 4 == 1:\n",
+    "                    print(adj)"
+   ]
   }
  ],
  "metadata": {
