Visualizing fulfilling a set of path using bfs

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,19 +1310,210 @@
     "    print()\n",
     "    \n",
     "    while len(q) > 0:\n",
-    "        y, x = q.popleft()\n",
+    "        ny, nx = q.popleft()\n",
     "        \n",
     "        for k in range(4):\n",
-    "            ny = y + dy[k]\n",
-    "            nx = x + dx[k]\n",
+    "            ny += dy[k]\n",
+    "            nx += dx[k]\n",
     "            if is_coord_valid(ny, nx) and not chk[ny][nx]:\n",
     "                q.append((ny, nx))\n",
     "                adj[ny][nx] = 1\n",
     "                chk[ny][nx] = True\n",
     "                for l in adj:\n",
     "                    print(l)\n",
-    "                print()\n",
-    "                "
+    "                print()               "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "bfs(5, 5)"
    ]
   }
  ],
