--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -606,23 +606,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "# Bottom-up\n",
     "MOD = 1_000_000_000\n",
     "cache = [[0] * 10 for _ in range(101)]\n",
     "\n",
-    "for j in range(10):\n",
+    "for j in range(1, 10):\n",
     "    cache[1][j] = 1\n",
     "    \n",
     "for i in range(2, 101):\n",
     "    for j in range(10):\n",
     "        if j > 0:\n",
-    "            cache[i][j] = cache[i-1][j-1]\n",
+    "            cache[i][j] += cache[i-1][j-1]\n",
     "        if j < 9:\n",
-    "            cache[i][j] = cache[i-1][j+1]\n",
+    "            cache[i][j] += cache[i-1][j+1]\n",
     "        cache[i][j] %= MOD\n",
     "        \n",
     "ans = 0\n",
