More on boj_10844.ipynb

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -648,7 +648,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Top-down\n",
+    "MOD = 1_000_000_000\n",
+    "cache = [[0] * 10 for _ in range(101)]\n",
+    "\n",
+    "def f(n, d):\n",
+    "    if n==1 and d==0:\n",
+    "        return 0\n",
+    "    elif n==1 and d>9:\n",
+    "        return 1"
+   ]
   }
  ],
  "metadata": {
