More on boj_10844.ipynb

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -657,7 +657,12 @@
     "    if n==1 and d==0:\n",
     "        return 0\n",
     "    elif n==1 and d>9:\n",
-    "        return 1"
+    "        return 1\n",
+    "    \n",
+    "    elif n >= 2 and d == 0:\n",
+    "        cache[n][d] = f(n-1, d+1)\n",
+    "    elif n >=2 and  1 <= d <= 8:\n",
+    "        cache[n][d] = "
    ]
   }
  ],
