More on boj_10844.ipynb

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -662,7 +662,13 @@
     "    elif n >= 2 and d == 0:\n",
     "        cache[n][d] = f(n-1, d+1)\n",
     "    elif n >=2 and  1 <= d <= 8:\n",
-    "        cache[n][d] = "
+    "        cache[n][d] = f(n-1, d-1) + f(n-1, d+1)\n",
+    "    elif n >= 2 and d == 9:\n",
+    "        cache[n][d] = f(n-1, d-1)\n",
+    "        \n",
+    "    cache[n][d] %= MOD\n",
+    "    return cache[n][d]\n",
+    "\n"
    ]
   }
  ],
