More on boj_10844.ipynb

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -645,16 +645,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# Top-down\n",
     "MOD = 1_000_000_000\n",
     "cache = [[0] * 10 for _ in range(101)]\n",
     "\n",
     "def f(n, d):\n",
-    "    if n==1 and d==0:\n",
+    "    if n==0:\n",
+    "        return 0\n",
+    "    elif n==1 and d==0:\n",
     "        return 0\n",
     "    elif n==1 and d>9:\n",
     "        return 1\n",
@@ -668,7 +678,15 @@
     "        \n",
     "    cache[n][d] %= MOD\n",
     "    return cache[n][d]\n",
-    "\n"
+    "\n",
+    "ans = 0\n",
+    "N = int(input())\n",
+    "\n",
+    "for j in range(10):\n",
+    "    ans += f(N, j)\n",
+    "    ans %= MOD\n",
+    "    \n",
+    "print(ans)"
    ]
   }
  ],
