More on boj_10844.ipynb

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -657,7 +657,7 @@
     }
    ],
    "source": [
-    "# Top-down\n",
+    "# Top-down, N == 30, This takes 17mins and 7secs!!!!!\n",
     "MOD = 1_000_000_000\n",
     "cache = [[0] * 10 for _ in range(101)]\n",
     "\n",
