More on boj_10844.ipynb

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -618,7 +618,7 @@
     }
    ],
    "source": [
-    "# Bottom-up\n",
+    "# Bottom-up, N == 30, This just takes less than 1sec!!!!\n",
     "MOD = 1_000_000_000\n",
     "cache = [[0] * 10 for _ in range(101)]\n",
     "\n",
