More on boj_10844.ipynb

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -686,7 +686,7 @@
     "    ans += f(N, j)\n",
     "    ans %= MOD\n",
     "    \n",
-    "print(ans)"
+    "print(ans)   # 365808847"
    ]
   }
  ],
