More on boj_10844.ipynb

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -640,7 +640,7 @@
     "    ans += cache[N][j]\n",
     "    ans %= MOD\n",
     "    \n",
-    "print(ans)        "
+    "print(ans) # 365808847"
    ]
   },
   {
