--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -661,7 +661,7 @@
     "MOD = 1_000_000_000\n",
     "cache = [[0] * 10 for _ in range(101)]\n",
     "\n",
-    "def f(n, d):\n",
+    "def f(n, d):    \n",
     "    if n==0:\n",
     "        return 0\n",
     "    elif n==1 and d==0:\n",
@@ -669,14 +669,15 @@
     "    elif n==1 and d>0:\n",
     "        return 1\n",
     "    \n",
-    "    elif n >= 2 and d == 0:\n",
-    "        cache[n][d] = f(n-1, d+1)\n",
-    "    elif n >=2 and  1 <= d <= 8:\n",
-    "        cache[n][d] = f(n-1, d-1) + f(n-1, d+1)\n",
-    "    elif n >= 2 and d == 9:\n",
-    "        cache[n][d] = f(n-1, d-1)\n",
-    "        \n",
-    "    cache[n][d] %= MOD\n",
+    "    if not cache[n][d]:\n",
+    "        if n >= 2 and d == 0:\n",
+    "            cache[n][d] = f(n-1, d+1)\n",
+    "        elif n >=2 and  1 <= d <= 8:\n",
+    "            cache[n][d] = f(n-1, d-1) + f(n-1, d+1)\n",
+    "        elif n >= 2 and d == 9:\n",
+    "            cache[n][d] = f(n-1, d-1)\n",
+    "            \n",
+    "        cache[n][d] %= MOD\n",
     "    return cache[n][d]\n",
     "\n",
     "ans = 0\n",
