More on boj_10844.ipynb

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -689,6 +689,54 @@
     "    \n",
     "print(ans)   # 365808847"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "365808847\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Top-down, N == 30, This takes 17mins and 7secs!!!!!\n",
+    "MOD = 1_000_000_000\n",
+    "cache = [[0] * 10 for _ in range(101)]\n",
+    "\n",
+    "def f(n, d):    \n",
+    "    if n==0:\n",
+    "        cache[n][d] = 0\n",
+    "    elif n==1 and d==0:\n",
+    "        cache[n][d] = 0\n",
+    "    elif n==1 and d>0:\n",
+    "        cache[n][d] = 1\n",
+    "    \n",
+    "    if not cache[n][d]:\n",
+    "        if n >= 2 and d == 0:\n",
+    "            cache[n][d] = f(n-1, d+1)\n",
+    "        elif n >=2 and  1 <= d <= 8:\n",
+    "            cache[n][d] = f(n-1, d-1) + f(n-1, d+1)\n",
+    "        elif n >= 2 and d == 9:\n",
+    "            cache[n][d] = f(n-1, d-1)\n",
+    "            \n",
+    "        cache[n][d] %= MOD\n",
+    "        \n",
+    "    return cache[n][d]\n",
+    "\n",
+    "ans = 0\n",
+    "N = int(input())\n",
+    "\n",
+    "for j in range(10):\n",
+    "    ans += f(N, j)\n",
+    "    ans %= MOD\n",
+    "    \n",
+    "print(ans)   # 365808847"
+   ]
   }
  ],
  "metadata": {
