--- a/boj_1018.ipynb
+++ b/boj_1018.ipynb
@@ -2,17 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "\n",
-    "fast_input = open(\"data/boj_1018.txt\", \"r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -29,7 +18,10 @@
     }
    ],
    "source": [
-    "N, M = map(int, fast_input.readline().)\n",
+    "import sys\n",
+    "fast_input = open(\"data/boj_1018.txt\", \"r\")\n",
+    "\n",
+    "N, M = map(int, fast_input.readline())\n",
     "\n",
     "board = [[0] * M for _ in range(N)]\n",
     "for i in range(N):\n",
