--- a/boj_1018.ipynb
+++ b/boj_1018.ipynb
@@ -21,7 +21,7 @@
     "import sys\n",
     "fast_input = open(\"data/boj_1018.txt\", \"r\")\n",
     "\n",
-    "N, M = map(int, fast_input.readline())\n",
+    "N, M = map(int, fast_input.readline().rstrip())\n",
     "\n",
     "board = [[0] * M for _ in range(N)]\n",
     "for i in range(N):\n",
@@ -31,31 +31,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ' '",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1018.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m first_line \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mreadline()\u001b[39m.\u001b[39mrstrip()\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m first_line \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(first_line)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#W2sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m N, M \u001b[39m=\u001b[39m \u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, [ch \u001b[39mfor\u001b[39;00m ch \u001b[39min\u001b[39;00m first_line]) \n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#W2sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m board \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mreadlines()\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ' '"
+     ]
+    }
+   ],
+   "source": [
+    "board = []\n",
+    "\n",
+    "with open(\"data/boj_1018.txt\", \"r\") as f:\n",
+    "    first_line = f.readline().rstrip()\n",
+    "    first_line = \"\".join(first_line)\n",
+    "    N, M = map(int, [ch for ch in first_line]) \n",
+    "    board = f.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"data/boj_1018.txt\", \"r\") as f:\n",
+    "    first_line = f.readline().rstrip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'8 8'"
+       "3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fast_input = open(\"data/boj_1018.txt\", \"r\")\n",
-    "fast_input.readline().rstrip()"
+    "len(first_line)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
