--- a/boj_1018.ipynb
+++ b/boj_1018.ipynb
@@ -2,39 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 2, got 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1018.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m N, M \u001b[39m=\u001b[39m \u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, fast_input\u001b[39m.\u001b[39mreadline()\u001b[39m.\u001b[39msplit())\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m board \u001b[39m=\u001b[39m [[\u001b[39m0\u001b[39m] \u001b[39m*\u001b[39m M \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(N)]\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(N):\n",
-      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 0)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 8\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
     "fast_input = open(\"data/boj_1018.txt\", \"r\")\n",
-    "\n",
-    "N, M = map(int, fast_input.readline().rstrip())\n",
-    "\n",
-    "board = [[0] * M for _ in range(N)]\n",
-    "for i in range(N):\n",
-    "    for j in range(N):\n",
-    "        board[i][j] = fast_input()[j]"
+    "N, M = map(int, fast_input.readline().split())\n",
+    "print(N, M)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
