--- a/boj_1018.ipynb
+++ b/boj_1018.ipynb
@@ -2,33 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8 8\n"
+      "행수 : 10,  열수 : 13\n"
      ]
     }
    ],
-   "source": [
-    "import sys\n",
-    "fast_input = open(\"data/boj_1018.txt\", \"r\")\n",
-    "N, M = map(int, fast_input.readline().split())\n",
-    "print(N, M)\n",
-    "print()\n",
-    "\n",
-    "board = [[0] * M for _ in range(N)]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import sys\n",
     "with open(\"data/boj_1018.txt\", \"r\") as f:\n",
@@ -38,55 +22,59 @@
     "    for i in range(N):\n",
     "        row = f.readline()        \n",
     "        for j in range(M):\n",
-    "            board[i][j] = row[j]"
+    "            board[i][j] = row[j]\n",
+    "            \n",
+    "print(f\"행수 : {len(board)},  열수 : {len(board[0])}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[['W', 'B', 'W', 'B', 'W', 'B', 'W', 'B'],\n",
-       " ['B', 'W', 'B', 'W', 'B', 'W', 'B', 'W'],\n",
-       " ['W', 'B', 'W', 'B', 'W', 'B', 'W', 'B'],\n",
-       " ['B', 'W', 'B', 'B', 'B', 'W', 'B', 'W'],\n",
-       " ['W', 'B', 'W', 'B', 'W', 'B', 'W', 'B'],\n",
-       " ['B', 'W', 'B', 'W', 'B', 'W', 'B', 'W'],\n",
-       " ['W', 'B', 'W', 'B', 'W', 'B', 'W', 'B'],\n",
-       " ['B', 'W', 'B', 'W', 'B', 'W', 'B', 'W']]"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'W', 'B', 'W', 'B', 'W']\n",
+      "['B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'W', 'B', 'W', 'B']\n",
+      "['B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'W', 'B', 'W', 'B', 'W']\n",
+      "['B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'W', 'B', 'W', 'B']\n",
+      "['B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'W', 'B', 'W', 'B', 'W']\n",
+      "['B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'W', 'B', 'W', 'B']\n",
+      "['B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'W', 'B', 'W', 'B', 'W']\n",
+      "['B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'W', 'B', 'W', 'B']\n",
+      "['W', 'W', 'W', 'W', 'W', 'W', 'W', 'W', 'W', 'W', 'B', 'W', 'B']\n",
+      "['W', 'W', 'W', 'W', 'W', 'W', 'W', 'W', 'W', 'W', 'B', 'W', 'B']\n"
+     ]
     }
    ],
    "source": [
-    "board"
+    "for row in board:\n",
+    "    print(row)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0, 1, 0, 1, 0, 1, 0, 1],\n",
-       " [1, 0, 1, 0, 1, 0, 1, 0],\n",
-       " [0, 1, 0, 1, 0, 1, 0, 1],\n",
-       " [1, 0, 1, 1, 1, 0, 1, 0],\n",
-       " [0, 1, 0, 1, 0, 1, 0, 1],\n",
-       " [1, 0, 1, 0, 1, 0, 1, 0],\n",
-       " [0, 1, 0, 1, 0, 1, 0, 1],\n",
-       " [1, 0, 1, 0, 1, 0, 1, 0]]"
+       "[[1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0],\n",
+       " [1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1],\n",
+       " [1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0],\n",
+       " [1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1],\n",
+       " [1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0],\n",
+       " [1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1],\n",
+       " [1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0],\n",
+       " [1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1]]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
