--- a/boj_1018.ipynb
+++ b/boj_1018.ipynb
@@ -83,6 +83,23 @@
     "board = [[0 if board[i][j] == \"W\" else 1 for j in range(len(board[i]))] for i in range(len(board))]\n",
     "board"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row_len, col_len = len(board), len(board[0])\n",
+    "\n",
+    "white_chess = \n",
+    "\n",
+    "for i in range(row_len+1):\n",
+    "    for j in range(col_len+1):\n",
+    "        chk_board = board[i:i+8][j:j+8]\n",
+    "        if chk_board[0][0] == 0:\n",
+    "            "
+   ]
   }
  ],
  "metadata": {
