--- a/boj_1018.ipynb
+++ b/boj_1018.ipynb
@@ -100,6 +100,46 @@
     "        if chk_board[0][0] == 0:\n",
     "            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "white_row = [0, 1] * 4\n",
+    "black_row = [1, 0] * 4\n",
+    "\n",
+    "white_chess = [white_row, black_row] * 4\n",
+    "black_chess = [black_row, white_row] * 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 1, 0, 1, 0, 1, 0, 1],\n",
+       " [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       " [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       " [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       " [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       " [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       " [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       " [1, 0, 1, 0, 1, 0, 1, 0]]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "white_chess"
+   ]
   }
  ],
  "metadata": {
