--- a/boj_1018.ipynb
+++ b/boj_1018.ipynb
@@ -86,23 +86,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "row_len, col_len = len(board), len(board[0])\n",
-    "\n",
-    "white_chess = \n",
-    "\n",
-    "for i in range(row_len+1):\n",
-    "    for j in range(col_len+1):\n",
-    "        chk_board = board[i:i+8][j:j+8]\n",
-    "        if chk_board[0][0] == 0:\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
    "outputs": [],
@@ -116,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -132,13 +115,81 @@
        " [1, 0, 1, 0, 1, 0, 1, 0]]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "white_chess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 0, 1, 0, 1, 0, 1, 0],\n",
+       " [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       " [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       " [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       " [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       " [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       " [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       " [0, 1, 0, 1, 0, 1, 0, 1]]"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "black_chess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row_len, col_len = len(board), len(board[0])\n",
+    "diff_list = []\n",
+    "\n",
+    "for i in range(row_len+1):\n",
+    "    for j in range(col_len+1):\n",
+    "        \n",
+    "        chk_board = board[i:i+8][j:j+8]\n",
+    "        diff = 0\n",
+    "        \n",
+    "        if chk_board[0][0] == 0:\n",
+    "            diff += abs(white[i][j] - chk_board[i][j])\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x, y = [2,3], [7, 2]\n",
+    "sum([(y[i] - x[i]) for i in range(len(y))])"
    ]
   }
  ],
